# 645-final-project

./: .gitignore  CMakeLists.txt  GreyscaleImage.cpp  GreyscaleImage.h  InferenceEngine.cpp  InferenceEngine.h  InferencePipeline.cpp  InferencePipeline.h  MnistImage.h  MnistReader.cpp  MnistReader.h  README.md  Tensor.h  lenet_main.cpp  run.sh  setup.sh  train_lenet.py
blas/: Blas.cpp  Blas.h
cmake/: FindGFlags.cmake
layers/: ConvLayer.cpp  ConvLayer.h  DenseLayer.cpp  DenseLayer.h  FlattenLayer.cpp  FlattenLayer.h  Layer.h  LayerFactory.h
